[gd_scene load_steps=9 format=3 uid="uid://bcsx8hqgph108"]

[ext_resource type="Texture2D" uid="uid://dsdy0son1jaso" path="res://SpaceTutStuff/Star Background.png" id="1_xo02m"]
[ext_resource type="Script" path="res://EnemyManager.gd" id="2_ddacj"]
[ext_resource type="SpriteFrames" uid="uid://bomysbrjtk543" path="res://ViewScreen.tres" id="4_3iq56"]
[ext_resource type="Script" path="res://words.gd" id="4_81jne"]
[ext_resource type="AudioStream" uid="uid://d1wt8ivdycbo" path="res://SpaceTutStuff/blaster.mp3" id="5_7qbkg"]
[ext_resource type="PackedScene" uid="uid://k74cqgy38ssk" path="res://SpaceTutStuff/Enemy.tscn" id="6_4c4ke"]

[sub_resource type="GDScript" id="GDScript_m0kwl"]
script/source = "extends Node2D

var active_enemy = null
var current_letter_index: int = -1

@onready
var enemy_manager = get_node(\"EnemyManager\")
@onready
var first_enemy = get_node(\"Enemies/Enemy1\")


func _ready():
	print(\"Typing Game\")
	enemy_manager.create_first_enemy_set()


func _input(event: InputEvent) -> void:
	if event.is_action(\"escape_from_game\"):
		print(\"Shut Down Requested!\")
		get_tree().quit()
	
	elif event.is_action(\"Tab_Enemy_switch\") and not event.is_pressed():
		enemy_manager.switch_enemy()
		print(\"switch enemy\")
		
	elif event is InputEventKey and not event.is_pressed():
		var typed_event = event as InputEventKey
		var key_typed = PackedByteArray([typed_event.physical_keycode]).get_string_from_utf8()
		$Cannon.play()
		enemy_manager.attack_enemy(key_typed)
"

[sub_resource type="ImageTexture" id="ImageTexture_0fu1r"]

[node name="Main" type="Node2D"]
script = SubResource("GDScript_m0kwl")
metadata/_edit_horizontal_guides_ = [18.0, 144.0]

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1179.0
offset_bottom = 681.0
texture = SubResource("ImageTexture_0fu1r")

[node name="StarBackground" type="Sprite2D" parent="TextureRect"]
position = Vector2(558, 594)
scale = Vector2(0.377075, 0.377075)
texture = ExtResource("1_xo02m")

[node name="EnemyManager" type="Node" parent="."]
script = ExtResource("2_ddacj")

[node name="Enemies" type="Node" parent="."]

[node name="Enemy1" parent="Enemies" instance=ExtResource("6_4c4ke")]
position = Vector2(294, 249)
rotation = 0.000971078
scale = Vector2(0.217197, 0.217197)
flip_h = true

[node name="Enemy2" parent="Enemies" instance=ExtResource("6_4c4ke")]
position = Vector2(586, 334)
scale = Vector2(0.231436, 0.231436)

[node name="Enemy3" parent="Enemies" instance=ExtResource("6_4c4ke")]
position = Vector2(873, 253)
rotation = -0.00375984
scale = Vector2(0.220588, 0.220588)
flip_h = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(603, 419)
scale = Vector2(0.653646, 0.653646)
sprite_frames = ExtResource("4_3iq56")
autoplay = "default"
frame_progress = 0.0812746

[node name="Wordlist" type="Node" parent="."]
script = ExtResource("4_81jne")

[node name="Cannon" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_7qbkg")
volume_db = -9.509

[connection signal="destroyed" from="Enemies/Enemy1" to="EnemyManager" method="_on_destroy_enemy"]
[connection signal="destroyed" from="Enemies/Enemy2" to="EnemyManager" method="_on_destroy_enemy"]
[connection signal="destroyed" from="Enemies/Enemy3" to="EnemyManager" method="_on_destroy_enemy"]
